--- a/Guess the Number/index.html
+++ b/Guess the Number/index.html
@@ -26,6 +26,9 @@
         <div id="history">
 
         </div>
+        <footer class="text-center">
+            <p>Codedy By Aswathy Saji</p>
+        </footer>
     </main>
     <script src="script.js"></script>
 </body>
